# alt-romes.github.io

./: .gitignore  Site.hs  cabal.project  control-site.cabal  index.html  koblenz-userpages.sh  makefile  papers.md  site  site.cabal  watch.sh
_site/: archive.html  index.html
_site/archive/: 2021-12-05-on-srs-and-studying-computer-science.html  (+1 more)
app/: Albums.hs  Animes.hs  Index.hs  Main.hs  Media.hs  Movies.hs  Page.hs  Post.hs  Projects.hs  Series.hs  Site.hs  Util.hs
archive/: 2021-12-05-on-srs-and-studying-computer-science.md  2022-05-04-GHC-contributions.md  2022-05-04-lecture.markdown  2022-05-04-lecture.md  2022-05-08-lecture-2.markdown  2022-05-13-lecture-3.markdown  2022-05-28-lecture-4.markdown  2022-05-28-lecture-5.md  2022-05-28-lecture-6.markdown  2022-05-28-lecture-6.md  2022-06-03-koblenz-ext.markdown  2022-06-06-lecture-7.md  2022-06-27-mvc-gloss.md  2022-07-10-frp.md  papers.md
assets/: style.css
assignments/: 2022-06-06-assignment-8.md  2022-06-22-assignment-8.md
css/: clay.hs  colorscheme.css  default.css  default.hs  old.css
data/: albums.yaml  animes.yaml  index.md  movies.yaml  projects.yaml  series.yaml
docs/: 2022-05-04-lecture.html  albums.html  animes.html  archive.html  atom.xml  index.html  movies.html  music.html  papers.html  posts.html  projects.html  rss.xml  series.html  style.css
favicon/: favicon_about.txt
js/: highlight.min.js
migrate/: control-site.cabal  site  site.hs
old-docs/: 2022-05-04-lecture.html  albums.html  index.html  movies.html  series.html
posts/: 1999-01-01-second-update-on-a-haskell-game-engine.todo.md  2022-05-04-lecture.md  2023-01-01-monthly-update-on-a-haskell-game-engine.md  2023-03-23-haskell-unicode-syntax-vim.md  2023-06-21-haskell-unicode-syntax-vim.md  2023-11-10-creating-a-macos-app-with-haskell-and-swift.md  2023-11-21-creating-a-macos-app-with-haskell-and-swift.md  2024-01-05-calling-haskell-from-swift.md  2024-03-09-calling-haskell-from-swift.md  2024-06-22-unsafe-coerce-haskell-to-swift.md  2024-08-14-planning-a-workout-week-with-100-lines-of-haskell.md
templates/: default.html  hakyll-default.html  post.html  posts-page.html  posts.html  tags.html
wip-posts/: 1999-00-00-latex-math-with-hakyll.md  1999-01-01-e-graphs-from-a-users-perspective.todo.md  1999-01-02-haskell-tooling-notes.md  1999-01-03-you-already-understand-types.md  1999-01-04-fold-markers-vim.md  1999-01-05-creating-a-macos-app-with-haskell-and-swift.md  2024-03-12-unsafe-coerce-haskell-to-swift.md  2024-04-21-linking-minecraft-with-things3.md  2024-08-03-ida-star-on-shuffdle.md
(+125 files in other folders)
