cabal-version:      2.4
name:               control-site
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable control-site
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        blaze-html,
        blaze-markup,
        bytestring,
        text,
        time,
        yaml,
        cmark-gfm,
        mtl,
        haskeline,
        transformers,
        exceptions,
        directory



    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Index,
        Media,
        Movies,
        Albums,
        Animes,
        Series,
        Util

